--- a/src/app/global/edit-game/edit-game.component.html
+++ b/src/app/global/edit-game/edit-game.component.html
@@ -27,12 +27,13 @@
         <td>
           Color:
           <br>
-          <select [ngModel]="i" class="form-control" formControlName="color" [id]="'colorPicker'+i"
+          <input type="color" formControlName="color">
+          <!-- <select [ngModel]="i" class="form-control" formControlName="color" [id]="'colorPicker'+i"
             (change)="changeColor($event)">
 
             <option [style.background-color]="color.value" [value]="color.id" *ngFor="let color of colors">
               {{color.name}}</option>
-          </select>
+          </select> -->
         </td>
         <td *ngIf="i > 1">
           <button (click)="removeTeam(i)" class="btn btn-danger">Remove</button>
