pushing and saving data

--- a/src/app/global/header/header.component.html
+++ b/src/app/global/header/header.component.html
@@ -71,7 +71,7 @@
 
             <ul class="navbar-nav mr-auto  mt-2 mt-lg-0" *ngIf="isSecure && isField">
                 <li class="nav-item">
-                    <a class="nav-link" id="secure_nav_currentgame" [routerLink]="['/secure/start-game']">Start Games</a>
+                    <a class="nav-link" id="secure_nav_currentgame" [routerLink]="['/secure/startGame']">Start Games</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" id="secure_nav_mygame" [routerLink]="['/secure/manageGame']">Manage Games</a>
