--- a/src/app/global/gamelist/gamelist.component.html
+++ b/src/app/global/gamelist/gamelist.component.html
@@ -12,7 +12,7 @@
         <td>{{ p.name }}</td>
         <td>{{ p.teams.length }}</td>
         <!-- <td>{{ p.nodeModes }}</td> -->
-        <td>{{ p.map }}</td>
+        <td>{{ findMapName(p.map) }}</td>
         <td><button class="btn btn-sm btn-default btn-primary" (click)="editMode.emit(p)">Edit</button></td>
         <td><button class="btn btn-sm btn-default btn-danger" (click)="deleteMode.emit(p)">Delete</button></td>
       </tr>
