adding animations and changes

--- a/src/app/global/device-list/device-list.component.html
+++ b/src/app/global/device-list/device-list.component.html
@@ -32,6 +32,7 @@
                                             <option disabled selected value="none"> -- Select your Device Location -- </option>
                                             <option  
                                                 *ngFor="let location of getLocationList() ;"
+                                                [value]="device.location"
                                                 [disabled]="location.isDisabled">
 
                                                 {{location.name}}
